--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,6 @@
     <title>小猪佩奇</title>
 </head>
 <body>
-    <input type="button" value="获取数据" id="btn1">
-    <h1>nihao</h1>
-    <h2>zaijian</h2>
+    <div id="app"></div>
 </body>
 </html>
