--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>小猪佩奇</title>
+    <title>小猪佩奇1</title>
 </head>
 <body id="peiqi">
 
