--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <title>小猪佩奇1</title>
 </head>
-<body id="peiqi">
+<body>
+    <div id="peiqi">
 
-
+    </div>
 </body>
 </html>
