--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>小猪佩奇1</title>
 </head>
-<body>
-    <div id="peiqi">
+<body class="skin-blue fixed">
+    <div id="peiqi" class="wrapper">
 
     </div>
 </body>
